resources/styles.css
:root {
  --light-blue: #b6d4d1;
  --darker-blue: #81aeae;
  --navy: #0b1c2c;
  --cream: #faf4eb;
}
@font-face {
  font-family: "Old-Fashioned-Script";
  src: url("fonts/Old-Fashion-Script-Regular.ttf") format("truetype");

  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "Libre-Baskerville-Regular";
  src: url("fonts/LibreBaskerville-Regular.ttf") format("truetype");

  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "Libre-Baskerville-Bold";
  src: url("fonts/LibreBaskerville-Bold.ttf") format("truetype");

  font-weight: bold;
  font-style: normal;
}
body {
  margin: 0;
  padding: 0;
  background-color: var(--cream) !important;
  max-width: 100vw;
  overflow-x: hidden;
}
.nav-item h1 {
  font-family: "Old-Fashioned-Script";
  font-size: 150px;
  line-height: 0.7;
  color: var(--navy);
}
.navbar {
  background-color: var(--light-blue);
}
.navbar-collapse {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  min-height: 110vh;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: var(--cream);
}
.navbar-toggler:focus {
  border: solid;
  border-color: var(--navy) !important;
  border-radius: 10px !important;
  box-shadow: none !important;
}
.navbar-toggler {
  border: none !important;
}
.navbar-toggler-icon {
  background-image: none !important;
}
.fa-bars {
  color: var(--navy);
}
.fa-bars:click {
  color: var(--darker-blue);
}
.navbar-text {
  font-family: "Libre-Baskerville-Regular";
  font-size: 30px;
  color: var(--navy) !important;
}
.navbar-text:hover {
  font-family: "Libre-Baskerville-Regular";
  font-size: 30px;
  color: var(--darker-blue) !important;
}
.navbar-toggler,
.navbar-brand {
  z-index: 1;
}
.navbar-collapse .nav-link {
  font-size: 1.5em;
  letter-spacing: 2px;
}
.nav-item:not(:last-child) {
  padding: 0.2em 4em;
}
.body-text {
  font-family: "Libre-Baskerville-Regular";
  font-size: 15px;
  color: var(--navy);
}
.section-title {
  font-family: "Old-Fashioned-Script";
  font-size: 75px;
  color: var(--navy);
}
.subtext {
  font-family: "Libre-Baskerville-Bold";
  font-size: 20px;
  color: var(--navy);
}
.left-col {
  flex: 1;
  display: flex;
  justify-content: right;
  align-items: right;
  padding-right: 2rem;
}
.right-col {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  padding-left: 2rem;
}

/* Landing Section*/
#landing .landing-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: var(--light-blue);
}
#landing .landing-container img {
  width: 150px;
  height: 150px;
}
#landing .landing-container h1 {
  font-family: "Old-Fashioned-Script";
  font-size: 150px;
  color: var(--navy);
}
#landing .landing-container h2 {
  font-family: "Libre-Baskerville-Regular";
  color: var(--navy);
}

/* About Section*/
#about .about-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 6rem;
  padding-left: 6rem;
  min-height: 75vh;
}
#about .about-container .left-col img {
  border-radius: 10px;
}
.about-container .carousel-item {
  transition: transform 2s ease-in-out;
}
.about-container .carousel-fade .active.carousel-item-start {
  transition: opacity 0s 2s;
}
.about-container .carousel-fade .active.carousel-item-end {
  transition: opacity 0s 2s;
}

/* Favorites Section*/
#favorites #menu {
  text-decoration: underline;
}
#favorites a:hover {
  font-family: "Libre-Baskerville-Bold";
  color: var(--darker-blue);
  text-decoration: underline;
}
#favorites .favorites-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 2rem;
  padding-right: 10rem;
  padding-left: 10rem;
  min-height: 50vh;
}
#favorites .favorites-container .favorite-desserts {
  display: flex;
  flex-direction: space-evenly;
  padding-top: 2rem;
  padding-bottom: 2rem;
}
#carouselFavorites {
  display: none;
}
#favorites img {
  width: auto;
  height: auto;
  height: 200px;
}
#favorites .card {
  background-color: transparent;
  border: none;
  align-items: center;
}
#favorites button {
  font-family: "Libre-Baskerville-Regular";
  color: var(--navy);
  background-color: var(--light-blue);
  border: none;
  font-size: 20px;
}
#favorites button:hover {
  font-family: "Libre-Baskerville-Regular";
  color: var(--navy);
  background-color: var(--darker-blue);
  border: none;
  font-size: 20px;
}
#carouselFavorites .carousel-inner {
  padding: 1em;
}
#carouselFavorites .card {
  margin: 0 0.5em;
}
.carousel-control-prev:hover {
  color: transparent !important;
}
.carousel-control-next:hover {
  color: transparent !important;
}
.carousel-control-prev .fa-chevron-left {
  color: var(--navy);
}
.carousel-control-next .fa-chevron-right {
  color: var(--navy);
}

/* Contact Section*/
#contact .contact-container {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 10rem;
  padding-left: 10rem;
  min-height: 75vh;
  color: var(--navy);
}
iframe {
  border-radius: 10px;
  width: 528px;
  height: 400px;
  border: 0;
}

/* Footer Section*/
#footer {
  width: 100vw;
  display: block;
  overflow: hidden;
  padding: 60px 0;
  box-sizing: border-box;
  background-color: var(--navy);
}
.footer-container {
  display: block;
  margin: 0 auto;
  width: 1100px;
  height: 100%;
}
.footer-container .logo-container {
  width: 10%;
  float: right;
  height: 100%;
}
.footer-container .logo-container img {
  width: 170px;
  height: auto;
}
.footer-container .footer-info {
  width: calc(65 / 2%);
  margin-left: 50px;
  float: left;
  height: 100%;
}
.footer-container p {
  display: block;
  color: var(--cream);
}
.footer-container a {
  color: var(--cream);
  padding-bottom: 5px;
  width: 100%;
  display: block;
  text-decoration: none;
}
.footer-container a:hover {
  color: var(--darker-blue);
}
/* ... */

